2003-02-15 Araki Ken <arakiken@users.sf.net>

	* Tuned up mlconfig.

2003-02-15 Araki Ken <arakiken@users.sf.net>

	* '\n','\t','\e' special characters can be specified in the value of init_str option.

2003-02-15 Araki Ken <arakiken@users.sf.net>

	* Added -#/--initstr/init_str option.
	  The string specified as this option's value is initially sent to pty.
	* Renamed mlclient prefix option "pty_list" to "-P" / "--ptylist".
	* If -e option is specified after "mlterm /dev/...", the command string
	  following "-e" is sent to the specified "/dev/..." pty.

2003-02-15 Araki Ken <arakiken@users.sf.net>

	* Mlconfig didn't deal with ISO8859-11(TIS620) correctly. Fixed.
	* Mlterm exit(1) if us ascii for the specified encoding not found.

2003-02-12  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added a cache to x_imagelib_load_file in x_imagelib_gdk.c 
	  so that the last used image can be re-generated 
	  without reading from the image file again.
	  (for Seiichi SATO san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Mlterm died as soon as the pty in the last window closed even if 
	  other background ptys exist. Fixed.
	  (Thanks to Nanashi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Backscroll mode is automatically exitted if screen is scrolled to the bottom.
	  (Thanks to Murase Masaki san)
	* Mlconfig appears in the correct display even if it is called from the window
	  whose display is different from the default.
	  (Thanks to Minami Hirokazu san and Nakada Nobuyoshi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient wouldn't die until the new window which mlclient created dies. Fixed.
	  (Thanks to Nanashi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient accepts "pty_list" and "/dev/..." as the 1st argument.
	  If "pty_list" is specified, mlclient outputs pty lists which are opened.
	  If "/dev/..." is specified, a new window is opened with the specified pty.

2003-2-11 Araki Ken <arakiken@users.sf.net>
