@@ -15,8 +15,9 @@ int  ml_term_manager_final( void) ;
 
 ml_term_t *  ml_create_term( u_int  cols , u_int  rows , u_int  tab_size , u_int  log_size ,
 	ml_char_encoding_t  encoding , int  not_use_unicode_font , int  only_use_unicode_font ,
-	int  col_size_a , int  use_char_combining , int  use_multi_col_char , int  use_bce ,
-	ml_bs_mode_t  bs_mode) ;
+	int  col_size_a , int  use_char_combining , int  use_multi_col_char , int  use_bidi ,
+	int  use_bce , int  use_dynamic_comb , ml_bs_mode_t  bs_mode ,
+	ml_vertical_mode_t  vertical_mode , ml_iscii_lang_type_t  iscii_lang_type) ;
 
 ml_term_t *  ml_get_term( char *  dev) ;
 
